[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Datapacks/UI/CrotchCode/UI/AnimPickerSelectorVar.gd" type="Script" id=1]

[node name="AnimPickerSelectorVar" type="HBoxContainer"]
margin_right = 536.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
text = "State"

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 36.0
margin_right = 448.0
margin_bottom = 24.0
size_flags_horizontal = 3
clip_text = true

[node name="VarOptionList" type="OptionButton" parent="."]
visible = false
margin_left = 244.0
margin_right = 448.0
margin_bottom = 24.0
size_flags_horizontal = 3
clip_text = true

[node name="VarEnabledBox" type="CheckBox" parent="."]
margin_left = 452.0
margin_right = 536.0
margin_bottom = 24.0
text = "From var"

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="VarOptionList" to="." method="_on_VarOptionList_item_selected"]
[connection signal="toggled" from="VarEnabledBox" to="." method="_on_VarEnabledBox_toggled"]
